RESOLVED FIXED140921
REGRESSION (r179101): SVGUseElement::expandUseElementsInShadowTree has an object lifetime mistake
https://bugs.webkit.org/show_bug.cgi?id=140921
Summary REGRESSION (r179101): SVGUseElement::expandUseElementsInShadowTree has an obj...
Darin Adler
Reported 2015-01-26 19:47:21 PST
REGRESSION (r179101): SVGUseElement::expandUseElementsInShadowTree has an object lifetime mistake
Attachments
Patch (3.87 KB, patch)
2015-01-26 19:48 PST, Darin Adler
no flags
Darin Adler
Comment 1 2015-01-26 19:48:20 PST
Darin Adler
Comment 2 2015-01-26 19:48:55 PST
WebKit Commit Bot
Comment 3 2015-01-26 20:40:00 PST
Comment on attachment 245402 [details] Patch Clearing flags on attachment: 245402 Committed r179163: <http://trac.webkit.org/changeset/179163>
WebKit Commit Bot
Comment 4 2015-01-26 20:40:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.