REGRESSION (r179101): SVGUseElement::expandUseElementsInShadowTree has an object lifetime mistake https://bugs.webkit.org/show_bug.cgi?id=140921

Reviewed by Alexey Proskuryakov.

Bug found by running regression tests with Address Sanitizer.

* svg/SVGUseElement.cpp:
(WebCore::SVGUseElement::expandUseElementsInShadowTree): Use a Ref to protect
the original use element after it's been replaced in the tree; we use it for
one more thing after that.


Canonical link: https://commits.webkit.org/158905@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179163 268f45cc-cd09-0410-ab3c-d52691b4dbfc